--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
   },
   "dependencies": {
     "@prisma/client": "5.22.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@remix-run/node": "^2.14.0",
     "@remix-run/react": "^2.14.0",
     "@remix-run/serve": "^2.14.0",
+    "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "domain-functions": "^3.3.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.460.0",
     "react": "^18.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
+    "remix-forms": "^2.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
