--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/react": "2.15.2",
     "@remix-run/serve": "2.15.2",
     "@tanstack/react-table": "^8.20.5",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.2.0",
     "@remix-run/dev": "2.15.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
